[package]
name = "turing-machine"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.6.0", features = ["debug", "tokio", "image", "glow"] }
iced_lazy = "0.3.0"
iced_native = "0.7.0"
num-traits = "0.2"
const-str = "0.5.3"
rfd = "0.10.0"
image = "0.24"
webbrowser = "0.8.4"
dirs = "4.0.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"